# disappTracks

./: .gitignore  CMakeLists.txt  Doxyfile  Helpers.hpp  Makefile  README.md  analyzeClusters.cpp  analyzeGeneralTracks.cpp  analyzeTagger.cpp  cutsCorrelations.cpp  display.cpp  drawAdvancedTaggerPlots.cpp  drawBasicTaggerPlots.cpp  drawDistributions.cpp  drawEecal.cpp  drawHelixPlots.cpp  drawTaggerPlots.cpp  drawTriggerTurnOn.cpp  eventDisplay.cpp  geneticOptimizer.cpp  getFfactor.cpp  getMetWeights.cpp  getTrackHeatMap.cpp  helixFitter.cpp  helixTagger.cpp  helixTagger.root  index.html  plotDeDx  plotDeDx.C  plotDeDx.cpp  prepareABCDplots.cpp  runAnalysis.cpp  scanCuts.cpp  setenv.sh  singleCutDetails.cpp  taggerFitter.cpp  taggerScanner.cpp
buildTaggerFitter/: CMakeLists.txt  Makefile  condorConfig.sub  condorConfig_maxLayers_auc.sub  condorConfig_maxLayers_sigmaInit.sub  condorConfig_maxLength_sigmaInit.sub  condorConfig_maxLength_sigmaL1.sub  condorConfig_nHelices_sigmaL1.sub  run_all_fitters.sh  setenv.sh  taggerFitter
condor/: analyzerClusters.sub  analyzerGeneralTracks.sub  condorConfig_maxHits_auc.sub  condorConfig_maxHits_maxEff.sub  condorConfig_maxHits_sigmaInit.sub  condorConfig_maxHits_sigmaL0.sub  condorConfig_maxHits_sigmaL1.sub  condorConfig_maxLayers_maxEff.sub  condorConfig_maxLayers_sigmaL0.sub  condorConfig_maxLayers_sigmaL1.sub  condorConfig_maxLength_auc.sub  condorConfig_maxLength_maxEff.sub  condorConfig_maxLength_sigmaL0.sub  condorConfig_nHelices_auc.sub  condorConfig_nHelices_maxEff.sub  condorConfig_nHelices_sigmaInit.sub  geneticOptimizer.sub  helixTagger.sub  prepareABCDplots.sub  run_abcd_optimization.sh  run_analyzeClusters.sh  run_analyzeGeneralTracks.sh  run_fitter.sh  run_geneticOptimizer.sh  run_helixTagger.sh  run_scanner.sh
condor/error/: taggerFitter.2650827.0.err
condor/output/: taggerFitter.2650827.0.out
configs/: analysis.md  clusters.md  eventDisplay.md  helixFitter.md  helixTagger.md  helixTagger3layers.md  helixTagger4layers.md  helixTagger5-6layers.md  helixTaggerAsymmetric.md  helixTaggerBkg.md  helixTaggerHighMerging.md  helixTaggerHighMergingBkg.md  helixTaggerLowSeedChi.md  helixTaggerLowSeedChiBkg.md  helixTaggerLowTrackChi.md  helixTaggerLowTrackChiBkg.md  helixTaggerNoMissing.md  helixTaggerNoMissingBkg.md  helixTaggerNoNoise.md  helixTaggerNoNoiseBkg.md  helixTaggerNoPionHits.md  helixTaggerTunedOnTruth.md  helixTaggerTuning.md  helixTaggerWithEndcaps.md  helixTagger_maxHits.md  helixTagger_maxHits_auc.md  helixTagger_maxHits_maxEff.md  helixTagger_maxHits_signInit.md  helixTagger_maxHits_signL0.md  helixTagger_maxLayers_auc.md  helixTagger_maxLayers_maxEff.md  helixTagger_maxLayers_signInit.md  helixTagger_maxLayers_signL0.md  helixTagger_maxLength.md  helixTagger_maxLength_auc.md  helixTagger_maxLength_maxEff.md  helixTagger_maxLength_signInit.md  helixTagger_maxLength_signL0.md  helixTagger_nHelices_auc.md  helixTagger_nHelices_maxEff.md  (+3 more)
eventsGeneration/: AMSB_chargino300GeV_ctau10cm_NoFilter_13TeV.py  geant4cards.tar  install.sh  instructions.md  run_GEN-SIM.sh  run_batch.sub  submitJobs.sh
include/: ArcSet2D.hpp  ArcSetProcessor.hpp  Circle.hpp  CircleProcessor.hpp  Config.hpp  ConfigManager.hpp  CutsManager.hpp  Display.hpp  Event.hpp  EventCut.hpp  EventProcessor.hpp  EventSet.hpp  Fitter.hpp  FitterConfig.hpp  Helix.hpp  HelixFitter.hpp  HelixProcessor.hpp  Helpers.hpp  HistSet.hpp  Jet.hpp  JetCut.hpp  JetProcessor.hpp  Lepton.hpp  LeptonCut.hpp  LeptonProcessor.hpp  Logger.hpp  MonitorsManager.hpp  PerformanceMonitor.hpp  Point.hpp  PointsProcessor.hpp  Track.hpp  TrackCut.hpp  TrackProcessor.hpp
macros/: calcPixelFraction.C  compareSamples.C  compareTaggerVsGeneral.C  drawCharginoRecoPlots.C  drawLimits.C  drawPlots.C  drawTrackerHeatMap.C  drawTriggerTurnOn.C  drawZpeak.C  getLimitsExtrapolate.C  getLimitsFromR.C  limits_datacard_mc_2x2.txt  limits_datacard_mc_3x3_3layers.txt  limits_datacard_mc_3x3_4layers.txt  nCharginoLayers.root  printGeneticResults.C  printLatexTableFromABCD.C  probePionRadius.C  test.txt  zRangePrediction.C
macros/limitsData/: atlas_observed.txt  cms_short_disappearing_2-tracks.txt  cms_short_disappearing_2-tracks_extended.txt  cms_short_disappearing_2-tracks_with2016.txt  cms_short_disappearing_2x2_3-layers_LH_noTag_1000_20.txt  cms_short_disappearing_2x2_3-layers_LH_noTag_300_10.txt  cms_short_disappearing_2x2_3-layers_LH_noTag_300_3.txt  cms_short_disappearing_2x2_3-layers_LH_noTag_300_30.txt  cms_short_disappearing_2x2_3-layers_LH_noTag_500_10.txt  cms_short_disappearing_2x2_3-layers_LH_noTag_650_10.txt  cms_short_disappearing_2x2_3-layers_LH_noTag_650_20.txt  cms_short_disappearing_2x2_3-layers_LH_noTag_800_10.txt  cms_short_disappearing_2x2_3-layers_LH_noTag_800_20.txt  cms_short_disappearing_2x2_3-layers_notag_1000_10.txt  cms_short_disappearing_2x2_3-layers_notag_1000_10or20.txt  cms_short_disappearing_2x2_3-layers_notag_300_10.txt  cms_short_disappearing_2x2_3-layers_notag_300_3.txt  cms_short_disappearing_2x2_3-layers_notag_300_30.txt  cms_short_disappearing_2x2_3-layers_notag_500_10.txt  cms_short_disappearing_2x2_3-layers_notag_650_10.txt  cms_short_disappearing_2x2_3-layers_notag_800_20.txt  cms_short_disappearing_2x2_4-layers_300_3.txt  cms_short_disappearing_2x2_4-layers_Chargino_300_1.txt  cms_short_disappearing_2x2_4-layers_Chargino_300_30.txt  cms_short_disappearing_2x2_4-layers_Chargino_400_1.txt  cms_short_disappearing_2x2_4-layers_Chargino_500_1.txt  cms_short_disappearing_2x2_4-layers_Chargino_500_10.txt  (+299 more)
plots/: tagger_performance.root
src/: ArcSet2D.cpp  ArcSetProcessor.cpp  Circle.cpp  CircleProcessor.cpp  ConfigManager.cpp  CutsManager.cpp  Display.cpp  Event.cpp  EventCut.cpp  EventProcessor.cpp  EventSet.cpp  Fitter.cpp  FitterConfig.cpp  Helix.cpp  HelixProcessor.cpp  HistSet.cpp  Jet.cpp  JetCut.cpp  JetProcessor.cpp  Lepton.cpp  LeptonCut.cpp  LeptonProcessor.cpp  Logger.cpp  MonitorsManager.cpp  PerformanceMonitor.cpp  Point.cpp  PointsProcessor.cpp  Track.cpp  TrackCut.cpp  TrackProcessor.cpp
test/: datacard_mytest.txt
(+303 files in other folders)
